welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def  move(nbPas: Int,versLAvant: Boolean) {
	if(versLavant==true){
		avance(nbPas) 
	}
	else {
		recule(nbPas)
	}
}
